--- a/W3_MP3/index.html
+++ b/W3_MP3/index.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>MP3 Player</title>
+    <link rel="shortcut icon" href="img/play.png" type="image/x-icon">
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
+    <!-- css -->
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-    
+    <main class="main">
+        <aside class="aside">
+            <div class="menu">
+                <div class="list"></div>
+                <div class="singer"></div>
+                <div class="favorite"></div>
+            </div>
+            <div class="working">
+                <button class="aside-switch">
+                    <span>List</span><div class="line"></div><div class="line"></div><div class="line"></div></button>
+            </div>
+        </aside>
+        <div class="player">
+            <div class="cd">
+                <div class="circle"></div>
+            </div>
+            <div class="right"></div>
+            <div class="bottom"></div>
+        </div>
+    </main>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/all.js"></script>
 </body>
 </html>
