--- a/W3_MP3/index.html
+++ b/W3_MP3/index.html
@@ -32,6 +32,7 @@
                 </li>
                 <li class="menu-li singer">
                     <button class="menu-button">歌手</button>
+                    <ul class="submenu"></ul>
                 </li>
                 <li class="menu-li favorite">
                     <button class="menu-button">我的最愛</button>
@@ -46,21 +47,6 @@
                 </button>
                 <div class="title">工作歌單</div>
                 <ul class="working-list">
-                    <li class="song">
-                        <div class="row">
-                            <div class="title">黑色幽默</div>
-                            <div class="album">同名專輯</div>
-                        </div>
-                        <div class="row">
-                            <div class="singer">周杰倫</div>
-                            <div class="time">04:43</div>
-                        </div>
-                        <div class="buttons">
-                            <button class="favorite"></button>
-                            <button class="play"></button>
-                        </div>
-
-                    </li>
                     <li class="song">
                         <div class="row">
                             <div class="title">讓我為你唱情歌</div>
