Update W4_Payment button function

--- a/W4_Payment/index.html
+++ b/W4_Payment/index.html
@@ -74,19 +74,19 @@
             <h3 class="title">付款方式</h3>
             <ul class="list">
                 <li class="method">
-                    <button class="button">
+                    <button class="button" data-a="credit">
                         <img class="image" src="img/icon_PayByCard@2x.png" alt="使用信用卡付款">
                         <div class="text">使用信用卡付款</div>
                     </button>
                 </li>
                 <li class="method">
-                    <button class="button">
+                    <button class="button" data-a="atm">
                         <img class="image" src="img/icon_PayByATM@2x.png" alt="使用WebATM付款">
                         <div class="text">使用WebATM付款</div>
                     </button>
                 </li>
                 <li class="method">
-                    <button class="button">
+                    <button class="button" data-a="convenience">
                         <img class="image" src="img/icon_PayByShop@2x.png" alt="使用超商代碼付款">
                         <div class="text">使用超商代碼付款</div>
                     </button>
