Update W5_Game player

--- a/W5_Game/index.html
+++ b/W5_Game/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="img/img-title.png" type="image/x-icon">
+    <!-- font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <style>
         body{
+            background-color: #20552C;
             display: flex;
             justify-content: center;
         }
