Update W5_Game speed

--- a/W5_Game/index.html
+++ b/W5_Game/index.html
@@ -13,6 +13,9 @@
             display: flex;
             justify-content: center;
         }
+        #game{
+            cursor: none;
+        }
     </style>
 </head>
 
