--- a/W5_Game/index.html
+++ b/W5_Game/index.html
@@ -25,6 +25,7 @@
     <script src="js/const.js"></script>
     <script src="js/game-start.js"></script>
     <script src="js/game-play.js"></script>
+    <script src="js/game-end.js"></script>
     <script src="js/index.js"></script>
 </body>
 
