--- a/W5_Game/index.html
+++ b/W5_Game/index.html
@@ -8,13 +8,22 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <style>
-        body{
+        body {
             background-color: #20552C;
+            padding: 0;
             display: flex;
             justify-content: center;
+            align-items: center;
+            margin: 0;
+            border: 0;
+            overflow: hidden;
         }
-        #game{
+
+        #game {
             cursor: none;
+            padding: 0;
+            margin: 0;
+            border: 0;
         }
     </style>
 </head>
@@ -23,6 +32,7 @@
     <div id="game"></div>
     <script src="js/lib/phaser.min.js"></script>
     <script src="js/const.js"></script>
+    <script src="js/size.js"></script>
     <script src="js/game-start.js"></script>
     <script src="js/game-play.js"></script>
     <script src="js/game-end.js"></script>
