Update mark, search

--- a/W10_MaskMap/index.html
+++ b/W10_MaskMap/index.html
@@ -26,7 +26,8 @@
                         @click="searching = true;" autocomplete="off">
                     <button class="search-button" @click="search()"></button>
                     <ul class="search-list" v-if="searching === true">
-                        <li class="search-item" v-for="(item, index, key) of searchingList" :key="key" @click="changePosition(item)">
+                        <li class="search-item" v-for="(item, index, key) of searchingList" :key="key"
+                            @click="changePosition(item)">
                             <div class="name">{{item.name}}</div>
                             <div class="address">{{item.address}}</div>
                         </li>
@@ -55,7 +56,7 @@
                     <h2 class="title">{{item.properties.name}}</h2>
                     <div class="distance">{{item.distance | round}} 公尺</div>
                     <div class="data address">{{item.properties.address}}</div>
-                    <a class="data phone" :href="'tel:'+item.properties.phone">{{item.properties.phone}}</a>
+                    <div class="data phone"><a :href="'tel:'+item.properties.phone">{{item.properties.phone}}</a></div>
                     <div class="mask">
                         <div class="adult" :class="{stock: item.properties.mask_adult > 0}">
                             成人口罩：<span>{{item.properties.mask_adult}}</span></div>
