--- a/W10_MaskMap/index.html
+++ b/W10_MaskMap/index.html
@@ -18,13 +18,14 @@
 
 <body>
     <div id="vue" class="wrap">
-        <div class="sidebar">
+        <div class="sidebar" :class="{hide: menuHide === true}">
+            <button class="toggle-button" @click="menuHide = !menuHide"></button>
             <div class="top">
                 <h1 class="title">口罩存量查詢</h1>
                 <div class="search" :class="{searching: searching === true}">
                     <input type="text" id="search-input" class="search-input" placeholder="搜尋藥局" v-model="searchInput"
                         @click="searching = true;" autocomplete="off">
-                    <button class="search-button" @click="search()"></button>
+                    <label class="search-label" for="search-input"></label>
                     <ul class="search-list" v-if="searching === true">
                         <li class="search-item" v-for="(item, index, key) of searchingList" :key="key"
                             @click="changePosition(item.geometry.coordinates[1],item.geometry.coordinates[0],item)" v-if="index < 10">
