--- a/W10_MaskMap/index.html
+++ b/W10_MaskMap/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>口罩存量查詢</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- font -->
